[project]
name = "option-pricing"
version = "0.1.0"
description = ""
authors = [
    {name = "Amit Dhavale",email = "amit.dhavale@imperial.ac.uk"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "option_pricing", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
ignore_missing_imports = true